--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "npm run build && gh-pages -d public"
+    "deploy": "gh-pages -d posts"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
