--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@types/node": "^18.11.5",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
+    "eslint": "^7.32.0",
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.8.4"
   }
 }
